tests/baselines/reference/clodulesDerivedClasses.errors.txt
==== tests/cases/compiler/clodulesDerivedClasses.ts (1 errors) ====
    class Shape {
        id: number;
    }
    
    module Shape.Utils {
        export function convert(): Shape { return null;}
    }
    
    class Path extends Shape {
          ~~~~
!!! clodulesDerivedClasses.ts(9,7): error TS2141: Class 'Path' cannot extend class 'Shape':
!!! 	Types of static property 'Utils' of class 'Path' and class 'Shape' are incompatible:
!!! 		Type 'typeof Path.Utils' is missing property 'Shape.Utils.convert' from type 'typeof Shape.Utils'.
        name: string;
    
    }
    
    module Path.Utils {
        export function convert2(): Path {
            return null;
        }
    }
    
    
    
    